# CPPUpstox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
examples/: example1.cpp
include/: uplink.h
include/uplink/: exceptions.h  http.h  parser.h  upstox.h
include/uplink/responses/: margins.h  responses.h  user.h
include/uplink/upstox/: api.h  internal.h  upstox.h  user.h
